--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body ng-app="MonApp">
+  <div ng-show="loading" class="loader">Loading...</div>  
   <div ng-view></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
