--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+
+
 </head>
 <body ng-app="MonApp">
   <div ng-show="loading" class="loader">Loading...</div>
@@ -20,7 +24,7 @@
 
 <script src="js/app.js"></script>
 <script src="js/services/post.js"></script>
-<script src="js/controller/comments.js"></script>
+<script src="js/controller/charts.js"></script>
 <script src="js/controller/posts.js"></script>
 </body>
 </html>
